src/main/gen/com/github/avrilfanomar/picatplugin/language/parser/PicatParser.java
// This is a generated file. Not intended for manual editing.
package com.github.avrilfanomar.picatplugin.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.avrilfanomar.picatplugin.language.psi.PicatTokenTypes.*;
import static com.github.avrilfanomar.picatplugin.language.parser.PicatParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PicatParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return program(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // head [COMMA condition] COMMA LBRACE event_pattern RBRACE ARROW_OP body DOT
  public static boolean action_rule(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "action_rule")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ACTION_RULE, "<action rule>");
    result_ = head(builder_, level_ + 1);
    result_ = result_ && action_rule_1(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, COMMA, LBRACE);
    result_ = result_ && event_pattern(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, RBRACE, ARROW_OP);
    result_ = result_ && body(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // [COMMA condition]
  private static boolean action_rule_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "action_rule_1")) return false;
    action_rule_1_0(builder_, level_ + 1);
    return true;
  }

  // COMMA condition
  private static boolean action_rule_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "action_rule_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && condition(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // [PRIVATE_KEYWORD] action_rule (action_rule | nonbacktrackable_predicate_rule)*
  public static boolean actor_definition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "actor_definition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ACTOR_DEFINITION, "<actor definition>");
    result_ = actor_definition_0(builder_, level_ + 1);
    result_ = result_ && action_rule(builder_, level_ + 1);
    result_ = result_ && actor_definition_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // [PRIVATE_KEYWORD]
  private static boolean actor_definition_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "actor_definition_0")) return false;
    consumeToken(builder_, PRIVATE_KEYWORD);
    return true;
  }

  // (action_rule | nonbacktrackable_predicate_rule)*
  private static boolean actor_definition_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "actor_definition_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!actor_definition_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "actor_definition_2", pos_)) break;
    }
    return true;
  }

  // action_rule | nonbacktrackable_predicate_rule
  private static boolean actor_definition_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "actor_definition_2_0")) return false;
    boolean result_;
    result_ = action_rule(builder_, level_ + 1);
    if (!result_) result_ = nonbacktrackable_predicate_rule(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // multiplicative_expression ((PLUS | CONCAT_OP | MINUS) multiplicative_expression)*
  public static boolean additive_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    result_ = multiplicative_expression(builder_, level_ + 1);
    result_ = result_ && additive_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ((PLUS | CONCAT_OP | MINUS) multiplicative_expression)*
  private static boolean additive_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!additive_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "additive_expression_1", pos_)) break;
    }
    return true;
  }

  // (PLUS | CONCAT_OP | MINUS) multiplicative_expression
  private static boolean additive_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = additive_expression_1_0_0(builder_, level_ + 1);
    result_ = result_ && multiplicative_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // PLUS | CONCAT_OP | MINUS
  private static boolean additive_expression_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expression_1_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, CONCAT_OP);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    return result_;
  }

  /* ********************************************************** */
  // not_constr (HASH_AND_OP not_constr)*
  public static boolean and_constr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_constr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, AND_CONSTR, "<and constr>");
    result_ = not_constr(builder_, level_ + 1);
    result_ = result_ && and_constr_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (HASH_AND_OP not_constr)*
  private static boolean and_constr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_constr_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!and_constr_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "and_constr_1", pos_)) break;
    }
    return true;
  }

  // HASH_AND_OP not_constr
  private static boolean and_constr_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_constr_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, HASH_AND_OP);
    result_ = result_ && not_constr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // shift_expression (BITWISE_AND shift_expression)*
  public static boolean and_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, AND_EXPRESSION, "<and expression>");
    result_ = shift_expression(builder_, level_ + 1);
    result_ = result_ && and_expression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (BITWISE_AND shift_expression)*
  private static boolean and_expression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_expression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!and_expression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "and_expression_1", pos_)) break;
    }
    return true;
  }

  // BITWISE_AND shift_expression
  private static boolean and_expression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_expression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, BITWISE_AND);
    result_ = result_ && shift_expression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // expression
  public static boolean argument(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARGUMENT, "<argument>");
    result_ = expression(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // LBRACE argument (COMMA argument)* RBRACE
  public static boolean array_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expression")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && argument(builder_, level_ + 1);
    result_ = result_ && array_expression_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, ARRAY_EXPRESSION, result_);
    return result_;
  }

  // (COMMA argument)*
  private static boolean array_expression_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expression_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!array_expression_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "array_expression_2", pos_)) break;
    }
    return true;
  }

  // COMMA argument
  private static boolean array_expression_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expression_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && argument(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // VARIABLE AT term [AT]
  public static boolean as_pattern(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "as_pattern")) return false;
    if (!nextTokenIs(builder_, VARIABLE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, VARIABLE, AT);
    result_ = result_ && term(builder_, level_ + 1);
    result_ = result_ && as_pattern_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, AS_PATTERN, result_);
    return result_;
  }

  // [AT]
  private static boolean as_pattern_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "as_pattern_3")) return false;
    consumeToken(builder_, AT);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER | SINGLE_QUOTED_ATOM | dollar_escaped_atom
  public static boolean atom(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATOM, "<atom>");
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, SINGLE_QUOTED_ATOM);
    if (!result_) result_ = dollar_escaped_atom(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // atom [LPAR [term (COMMA term)*] RPAR]
  public static boolean atom_or_call_no_lambda(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATOM_OR_CALL_NO_LAMBDA, "<atom or call no lambda>");
    result_ = atom(builder_, level_ + 1);
    result_ = result_ && atom_or_call_no_lambda_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // [LPAR [term (COMMA term)*] RPAR]
  private static boolean atom_or_call_no_lambda_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1")) return false;
    atom_or_call_no_lambda_1_0(builder_, level_ + 1);
    return true;
  }

  // LPAR [term (COMMA term)*] RPAR
  private static boolean atom_or_call_no_lambda_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAR);
    result_ = result_ && atom_or_call_no_lambda_1_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAR);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [term (COMMA term)*]
  private static boolean atom_or_call_no_lambda_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1_0_1")) return false;
    atom_or_call_no_lambda_1_0_1_0(builder_, level_ + 1);
    return true;
  }

  // term (COMMA term)*
  private static boolean atom_or_call_no_lambda_1_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = term(builder_, level_ + 1);
    result_ = result_ && atom_or_call_no_lambda_1_0_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (COMMA term)*
  private static boolean atom_or_call_no_lambda_1_0_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1_0_1_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!atom_or_call_no_lambda_1_0_1_0_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "atom_or_call_no_lambda_1_0_1_0_1", pos_)) break;
    }
    return true;
  }

  // COMMA term
  private static boolean atom_or_call_no_lambda_1_0_1_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_or_call_no_lambda_1_0_1_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && term(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // atom !(LPAR)
  public static boolean atom_without_args(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_without_args")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATOM_WITHOUT_ARGS, "<atom without args>");
    result_ = atom(builder_, level_ + 1);
    result_ = result_ && atom_without_args_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // !(LPAR)
  private static boolean atom_without_args_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_without_args_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, LPAR);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // parenthesized_goal
  //                   | function_call
  //                   | lambda_term
  //                   | term_constructor
  //                   | variable_index
  //                   | as_pattern
  //                   | list_expression
  //                   | array_expression
  //                   | STRING
  //                   | VARIABLE
  //                   | INTEGER
  //                   | FLOAT
  //                   | TRUE
  //                   | FALSE
  //                   | atom_without_args
  public static boolean base_expression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "base_expression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BASE_EXPRESSION, "<base expression>");
    result_ = parenthesized_goal(builder_, level_ + 1);
    if (!result_) result_ = function_call(builder_, level_ + 1);
    if (!result_) result_ = lambda_term(builder_, level_ + 1);
    if (!result_) result_ = term_constructor(builder_, level_ + 1);
    if (!result_) result_ = variable_index(builder_, level_ + 1);
    if (!result_) result_ = as_pattern(builder_, level_ + 1);
    if (!result_) result_ = list_expression(builder_, level_ + 1);
    if (!result_) result_ = array_expression(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, VARIABLE);
    if (!result_) result_ = consumeToken(builder_, INTEGER);
    if (!result_) result_ = consumeToken(builder_, FLOAT);
    if (!result_) result_ = consumeToken(builder_, TRUE);
    if (!result_) result_ = consumeToken(builder_, FALSE);
    if (!result_) result_ = atom_without_args(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }
